# TEOF

./: .editorconfig  .gitattributes  .gitignore  .hook_test  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.jsonc  .markdownlint.yaml  .markdownlintignore  AGENT_MANIFEST.claude-coding-1.json  AGENT_MANIFEST.codex-2.json  AGENT_MANIFEST.codex-4.json  AGENT_MANIFEST.codex-tier2.json  AGENT_MANIFEST.json  APERTURE-GUIDELINE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.bak  NOTICE  ONBOARDING.md  README.md  SECURITY.md  TAP_v3_2_TEOF_Alignment_Protocol_Final.txt  TODO.md  TRADEMARKS.md  architecture.md  bootloader  coverage.json  freeze.sh  hashes  hashes.json  observation notes.md  pyproject.toml  runmeta.json  teof_repo_tidy.sh
.githooks/: pre-commit  precommit_hygiene.sh
.github/: AGENT_ONBOARDING.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  markdownlint.yaml  teof.markdownlint-cli2.jsonc
_bus/: README.md
_plans/: 1970-01-01-agent-template.plan.json  2025-09-17-agent-bus-awareness-justification.md  2025-09-17-agent-bus-awareness.plan.json  2025-09-17-agent-bus-watch.justification.md  2025-09-17-agent-bus-watch.plan.json  2025-09-17-anchors-append-guard.justification.md  2025-09-17-anchors-append-guard.plan.json  2025-09-17-anchors-guard.plan.json  2025-09-17-automation-doc.plan.json  2025-09-17-codex1-support-justification.md  2025-09-17-codex1-support.plan.json  2025-09-17-commandment-defaults.plan.json  2025-09-17-commandment-tags.plan.json  2025-09-17-commandments-diff.plan.json  2025-09-17-commandments.plan.json  2025-09-17-convergence-metrics.plan.json  2025-09-17-delta-exchange.plan.json  2025-09-17-docs-landing.plan.json  2025-09-17-handshake-cli.plan.json  2025-09-17-handshake-diff.plan.json  2025-09-17-layer-update.plan.json  2025-09-17-ledger-upkeep.plan.json  2025-09-17-meaning-memory.plan.json  2025-09-17-metrics-aggregate.plan.json  2025-09-17-metrics-jsonl.plan.json  2025-09-17-metrics-logging.plan.json  2025-09-17-planner-cli-bootstrap.plan.json  2025-09-17-planner-eval-bootstrap.plan.json  2025-09-17-planner-insight-tools.plan.json  2025-09-17-planner-show-command.plan.json  2025-09-17-planner-v0-2.plan.json  2025-09-17-planner-validator-upgrade.plan.json  2025-09-17-queue-hygiene.plan.json  2025-09-17-reconcile-ci.plan.json  2025-09-17-reconcile-merge.plan.json  2025-09-17-reconcile-pipeline.plan.json  2025-09-17-reconciliation.plan.json  2025-09-17-runner-ux.plan.json  2025-09-18-agent-bus-status.justification.md  2025-09-18-agent-bus-status.plan.json  (+291 more)
agents/: roles.json
alignment-protocol/: TAP.md
alignment_protocol/: TAP-v3.1.md
anchors/: immutable.json
bootloaders/: bootloader-v3.3.md  bootloader.md
capsule/: PROVENANCE.md  README.md  RELEASE.md  attestation.txt  capsule-handshake  capsule-mini.txt  capsule-selfreconstructing.txt  capsule.txt  reconstruction.json  tests.md
config/: brief.json  events.json
core/: L0 observation.md  L1 principles.md  L2 objectives.md  L3 properties.md  L4 architecture.md  L5 workflow.md  L6 automation.md  (+4 more)
(+2583 files in other folders)
