[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "teof"
version = "0.1.0a2"
description = "TEOF systemic tooling (heuristic + ensemble)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyNaCl>=1.5",
    'tomli>=2.0; python_version < "3.11"',
]

[project.scripts]
teof = "teof.bootloader:main"
teof-validate = "extensions.validator.teof_systemic_min:main"
teof-plan = "tools.planner.cli:main"
teof-scan-driver = "tools.autonomy.scan_driver:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["extensions*", "teof*", "tools*"]
