[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "teof"
version = "0.1.0a2"
description = "TEOF systemic tooling (heuristic + ensemble)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyNaCl>=1.5",
    'tomli>=2.0; python_version < "3.11"',
    "pytest>=8.1",
    "pytest-cov>=4.1",
    "coverage>=7.5",
]

[project.scripts]
teof = "teof.bootloader:main"
teof-validate = "extensions.validator.teof_systemic_min:main"
teof-plan = "tools.planner.cli:main"
teof-scan-driver = "tools.autonomy.scan_driver:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["extensions*", "teof*", "tools*"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--maxfail=1 --disable-warnings --cov=teof --cov=tools --cov=extensions --cov-report=term-missing --cov-report=xml --cov-report=json"

[tool.coverage.run]
branch = true
source = [
    "teof",
    "tools",
    "extensions",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
